[tool.poetry]
name = "ticket-vault"
version = "0.1.0"
description = ""
authors = ["Matthew Tardiff <mattrix@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^20.12.2"
aiosqlite = "^0.17.0"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-sanic = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
